# Agentic-RAG-

./: README.md  agentic_rag.ipynb  main.py  pyproject.toml  rag_notes.txt  requirments.txt
chroma_db/: chroma.sqlite3
