[project]
name = "agentic-rag-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "huggingface-hub==0.34.4",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers==5.0.0",
    "tavily-python>=0.7.26",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "transformers==4.53.3",
    "typing-extensions>=4.16.0",
]
